fix nav z-index

--- a/src/common/view/nav.less
+++ b/src/common/view/nav.less
@@ -17,6 +17,7 @@
       background-color: @white;
       border-radius: 50%;
       opacity: 0.75;
+      z-index: 24;
     }
     > .enter {
       display: none;
@@ -59,6 +60,7 @@
       background-color: @white;
       border-radius: 50%;
       opacity: 0.75;
+      z-index: 24;
     }
     &.is-menu {
       > .enter {
